--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,52 +1,39 @@
-# Licensed to the Apache Software Foundation (ASF) under one
-# or more contributor license agreements.  See the NOTICE file
-# distributed with this work for additional information
-# regarding copyright ownership.  The ASF licenses this file
-# to you under the Apache License, Version 2.0 (the
-# "License"); you may not use this file except in compliance
-# with the License.  You may obtain a copy of the License at
-#
-#   http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing,
-# software distributed under the License is distributed on an
-# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-# KIND, either express or implied.  See the License for the
-# specific language governing permissions and limitations
-# under the License.
-
-name: CI
-
-on: [pull_request,push]
-
 jobs:
   build:
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-    strategy:
-      matrix:
-        java-version: [ 8.0.232 ]
     env:
       GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GE_ACCESS_TOKEN }}
+    runs-on: self-hosted
     steps:
-      - name: Cache Gradle packages
-        uses: actions/cache@v2
-        with:
-          key: samza-ci-gradle-cache
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
+    - continue-on-error: true
+      name: Cache Gradle packages
+      uses: actions/cache@v2
+      with:
+        key: samza-ci-gradle-cache
+        path: '~/.gradle/caches
 
-      - uses: actions/checkout@v2
+          ~/.gradle/wrapper
 
-      - name: Set up JDK ${{ matrix.java-version }}
-        uses: actions/setup-java@v2
-        with:
-          java-version: ${{ matrix.java-version }}
-          distribution: 'zulu'
-
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
-
-      - name: Build with Gradle
-        run: ./gradlew build
+          '
+    - continue-on-error: true
+      uses: actions/checkout@v2
+    - continue-on-error: true
+      name: Set up JDK ${{ matrix.java-version }}
+      uses: actions/setup-java@v2
+      with:
+        distribution: zulu
+        java-version: ${{ matrix.java-version }}
+    - continue-on-error: true
+      name: Validate Gradle wrapper
+      uses: gradle/wrapper-validation-action@v1
+    - continue-on-error: true
+      name: Build with Gradle
+      run: ./gradlew build
+    strategy:
+      matrix:
+        java-version:
+        - 8.0.232
+    timeout-minutes: 60
+name: CI
+on:
+  repository_dispatch:
+    types: trigger-ga___ci.yml
